--- a/report/project_part2.ipynb
+++ b/report/project_part2.ipynb
@@ -1,15 +1,86 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "#### TMA4205 Numerical Linear Algebra\n",
+    "# Project Part 2\n",
+    "## Introduction\n",
+    "\n",
+    "In this part we want to find a low rank continuous approximation to a continuous matrix valued function."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
-    ""
-   ]
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "# imports and useful functions\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# line cyclers adapted to colourblind people\n",
+    "from cycler import cycler\n",
+    "\n",
+    "line_cycler = (cycler(color=[\"#E69F00\", \"#56B4E9\", \"#009E73\", \"#0072B2\", \"#D55E00\", \"#CC79A7\", \"#F0E442\"]) +\n",
+    "               cycler(linestyle=[\"-\", \"--\", \"-.\", \":\", \"-\", \"--\", \"-.\"]))\n",
+    "plt.rc(\"axes\", prop_cycle=line_cycler)\n",
+    "plt.rc('axes', axisbelow=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\"\"\"First define some useful functions for plotting and testing\"\"\"\n",
+    "from linalg.plotting import *"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Exercise 1:\n",
+    "..."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
