--- a/report/project_part2.ipynb
+++ b/report/project_part2.ipynb
@@ -227,9 +227,49 @@
    "cell_type": "markdown",
    "source": [
     "## Exercise 2\n",
-    "In the following code block the integration method of order 2 is implemented.\n",
-    "A method of order 1 is also used to obtain an estimate for the local truncation error.\n",
-    "The step size is then determined based on this local truncation error."
+    "### Time integration\n",
+    "### Test function\n",
+    "In ths exercise we consider $k$-order approximations of the solution to the matrix equation:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\dot A(t) =BA(t), A(0) = A_0,\n",
+    "\\end{equation}\n",
+    "\n",
+    "where B is a linear operator $B: \\mathbb{R}^{m \\times n} \\rightarrow \\mathbb{R}^{m \\times n}$.\n",
+    "This equation will have solution $A(t) = \\exp({tB})A_0$.\n",
+    "\n",
+    "In our test problem we let B be the discrete laplacian operator $L_h$.\n",
+    "Thus, $A(t)$ will be the time evolution of the space discretized heat equation in two space dimensions;\n",
+    "with $m,n$ nodes in the $x, y$ directions respectively.\n",
+    "Now computing the matrix exponential will be an expensive operation with cost $ O((nm)^{3}$). Therefore, we transform the original ODE to a ODE with only matrix products.\n",
+    "\n",
+    "For any time $t$ a discretized heat matrix can be considered as the sum of outer products\n",
+    "\n",
+    "\\begin{equation}\n",
+    "A(t) = \\sum_{i = 1}^{\\min(m,n)} u_i \\otimes v_i,\n",
+    "\\end{equation}\n",
+    "\n",
+    "where $u_i$ and $v_i$ are a vectors variying in the $x$ and $y$ directions respectively.\n",
+    "Now since the discrete laplacian is the sum of the double derivative in each directon it can be decomposed as:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "L_h(A(t))= \\sum_{i = 1}^{\\min(m,n)} D_{xx} u_i \\otimes v_i +\\sum_{i  = 1}^{\\min(m,n)} u_i \\otimes D_{yy} v_i = D_{xx}A(t) + A(t)D_{yy}^T.\n",
+    "\\end{equation}\n",
+    "\n",
+    "Here $D_{xx}$ and $D_{yy}$ are the discrete laplacians in one dimension.\n",
+    "Thus, the solutoin to the matrix ODE with $B = L_h$ is:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "A(t)= \\exp(tD_{xx})A_0 \\exp(tD_{yy}^T).\n",
+    "\\end{equation}\n",
+    "\n",
+    "We now only have to compute these two exponentials with cost $O(m^3+ n^3)$.\n",
+    "\n",
+    "### Efficient computation of the caylay map\n",
+    "\n",
+    "### Testing the caylay map with the heat eqatoin\n",
+    "\n",
+    "### Approximatons of the heat eqation"
    ],
    "metadata": {
     "collapsed": false
@@ -275,8 +315,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
@@ -327,8 +366,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
@@ -343,10 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "We now implement a space discretization of the heat equation as a matrix ode $\\dot A(t) =BA(t)$, with solution\n",
-    "$A(t) = \\exp{tB}A(0)$."
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -362,8 +397,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    },
    "execution_count": null,
@@ -389,10 +423,12 @@
     "m = 20\n",
     "t_f = 1\n",
     "k_list = [5, 15]\n",
-    "fig, axs = plt.subplots(ncols=len(k_list), sharex=True, sharey=True, constrained_layout=True,\n",
-    "                        figsize=(1 + 3 * len(k_list), 4))\n",
-    "axs[0].set_ylabel(\"Frobenious norm\")\n",
+    "fig, axs = plt.subplots(ncols=len(k_list), nrows=2, sharex=True, constrained_layout=True,\n",
+    "                        figsize=(1 + 3 * len(k_list), 4 + 3))\n",
+    "axs[0, 0].set_ylabel(\"Frobenious norm\")\n",
+    "axs[1, 0].set_ylabel(\"Frobenious norm\")\n",
     "fig.suptitle(\"Error for different low rank approximations\")\n",
+    "from linalg.integrate import get_y_dot\n",
     "\n",
     "for i, k in enumerate(k_list):\n",
     "    print(f\"Running k={k}\")\n",
@@ -408,23 +444,27 @@
     "\n",
     "    XA_diff = [np.linalg.norm(get_best_approx(A(t), k) - A(t), ord=\"fro\") for t in T]\n",
     "    YA_diff = [np.linalg.norm(multiply_factorized(*y) - A(t), ord=\"fro\") for t, y in zip(T, Y)]\n",
+    "    YA_dot_diff = [np.linalg.norm(get_y_dot(A_dot=A_dot, Y=y, t=t) - A_dot(t), ord=\"fro\") for t, y in zip(T, Y)]\n",
     "    YX_diff = [np.linalg.norm(multiply_factorized(*y) - get_best_approx(A(t), k), ord=\"fro\") for t, y in zip(T, Y)]\n",
     "\n",
-    "    ax = axs[i]\n",
-    "    ax.set_title(f\"$k={k}$\")\n",
-    "    ax.plot(T, XA_diff, label=\"||X - A||\")\n",
-    "    ax.plot(T, YA_diff, label=\"||Y - A||\")\n",
-    "    ax.plot(T, YX_diff, label=\"||Y - X||\")\n",
-    "    ax.set_xlabel(\"$t$\")\n",
-    "    ax.legend()\n",
+    "    ax_u = axs[0, i]\n",
+    "    ax_u.set_title(f\"$k={k}$\")\n",
+    "    ax_u.plot(T, YX_diff, label=\"||Y - X||\")\n",
+    "    ax_u.plot(T, YA_diff, label=\"||Y - A||\")\n",
+    "    ax_u.plot(T, YA_dot_diff, label=\"$||\\dot{Y} - \\dot{A}||$\")\n",
+    "    ax_u.legend()\n",
+    "\n",
+    "    ax_l = axs[1, i]\n",
+    "    ax_l.plot(T, XA_diff, label=\"||X - A||\")\n",
+    "    ax_l.set_xlabel(\"$t$\")\n",
+    "    ax_l.legend()\n",
     "    clear_output()\n",
     "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
@@ -445,7 +485,19 @@
    "cell_type": "markdown",
    "source": [
     "## Exercise 3\n",
-    "We now implement the test problem 3"
+    "We now consider the first example in section 3 of [4]. Here the matrix to be approximated is defined as\n",
+    "\n",
+    "\\begin{equation}\n",
+    "ÅA(t) = Q_1(t)\\bigg(A_1 + e^{t}A_2\\bigg)Q_2^T(t).\n",
+    "\\end{equation}\n",
+    "\n",
+    "Here $Q_i$ are orthonormal matrices given by $\\dot Q_i= T_i Q_i, \\ i=1,2$,\n",
+    "where $T_i$ are skew symmetric matrices with constant diagonals.\n",
+    "$A_1$ and $A_2$ are randomly generated matrices in $[0,5]^{100 \\times 100}$ with 10 singular values ≈ 1.\n",
+    "$\\epsilon$ is a prameter regulating how much noise is added to the $A_1$ and $A_2$ matrices.\n",
+    "See [4] for further details.\n",
+    "\n",
+    "The test problmen is implemented in the cell below."
    ],
    "metadata": {
     "collapsed": false
@@ -461,15 +513,19 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "We now test our  solution on ..."
+    "Using the test function defined above, we test the following approximation methods:\n",
+    "* Truncated SVD (best approximation of order $k$)\n",
+    "* Lanczos bidiagonalization method\n",
+    "* Dynamic low-rank approximation\n",
+    "\n",
+    "Each approximation method of order $k \\in \\{10,20\\}$ ws tested with a degree of added noice $\\epsilon \\in \\{1e-1, 1e-2, 1e-3, 1e-4, 1e-5\\}$."
    ],
    "metadata": {
     "collapsed": false,
@@ -501,9 +557,9 @@
     "        Y_0 = truncated_svd(A_0, k)\n",
     "\n",
     "        # integrate\n",
-    "        Y, T = matrix_ode_simple(0, t_f, Y_0=Y_0, X=A_dot, TOL=1e-0, verbose=True)\n",
+    "        Y, T = matrix_ode_simple(0, t_f, Y_0=Y_0, X=A_dot, TOL=1e-3, verbose=True)\n",
     "\n",
-    "        t_ind = get_equidistant_indexes(T, 0, t_f)\n",
+    "        t_ind = get_equidistant_indexes(T, 0, t_f, n=m)\n",
     "        T = [T[i] for i in t_ind]\n",
     "        Y = [Y[i] for i in t_ind]\n",
     "\n",
@@ -511,14 +567,16 @@
     "        b = np.random.rand(m)\n",
     "        XA_diff = [np.linalg.norm(get_best_approx(A(t), k) - A(t), ord=\"fro\") for t in T]\n",
     "        YA_diff = [np.linalg.norm(multiply_factorized(*y) - A(t), ord=\"fro\") for t, y in zip(T, Y)]\n",
+    "        YA_dot_diff = [np.linalg.norm(get_y_dot(A_dot=A_dot, Y=y, t=t) - A_dot(t), ord=\"fro\") for t, y in zip(T, Y)]\n",
     "        WA_diff = [np.linalg.norm(get_bidiagonal_approx(A(t), k=k, b=b) - A(t), ord=\"fro\") for t in T]\n",
     "        YX_diff = [np.linalg.norm(multiply_factorized(*y) - get_best_approx(A(t), k), ord=\"fro\") for t, y in zip(T, Y)]\n",
     "        ax = axs[i, j]\n",
     "        ax.set_title(f\"$k=${k}, $\\epsilon =$ {eps}\")\n",
-    "        ax.plot(T, XA_diff, label=\"||X - A||\")\n",
-    "        ax.plot(T, YA_diff, label=\"||Y - A||\")\n",
-    "        ax.plot(T, WA_diff, label=\"||W - A||\")\n",
-    "        ax.plot(T, YX_diff, label=\"||Y - X||\")\n",
+    "        ax.plot(T, XA_diff, label=\"$||X - A||$\")\n",
+    "        ax.plot(T, YA_diff, label=\"$||Y - A||$\")\n",
+    "        ax.plot(T, YA_dot_diff, label=\"$||\\dot{Y} - \\dot{A}||$\")\n",
+    "        ax.plot(T, WA_diff, label=\"$||W - A||$\")\n",
+    "        ax.plot(T, YX_diff, label=\"$||Y - X||$\")\n",
     "        ax.legend()\n",
     "        clear_output()\n",
     "plt.show()"
@@ -526,15 +584,17 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "We see something..."
+    "Effektive rank 10. More like a ank 10 matrix\n",
+    "Compared to the bidiagnoalizaon. low approsi\n",
+    "\n",
+    "For larger $k$ the lanchos bidiagonalizaton is better. Needs more dimentions to capture the same singular values."
    ],
    "metadata": {
     "collapsed": false
@@ -544,7 +604,16 @@
    "cell_type": "markdown",
    "source": [
     "## Exercise 4\n",
-    "We now implement the test problem 4"
+    "We now implement the second example in section 3 of [4]. Here $A(t)$ is defined as\n",
+    "\n",
+    "\\begin{equation}\n",
+    "A(t) = Q_1(t)\\bigg(A_1 + \\cos(t)A_2\\bigg)Q_2^T(t),\n",
+    "\\end{equation}\n",
+    "\n",
+    "where $Q_i$ and $A_i, \\ i={1,2}$ are defined as in the previous example.\n",
+    "Notice, however, that $e^t$ has been replaced by $\\cos(t)$\n",
+    "\n",
+    "The exaple is immplemented in the code block below."
    ],
    "metadata": {
     "collapsed": false
@@ -560,15 +629,15 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "We now test our  solution on ..."
+    "We now test the the dynamical low-rank approximation $Y(t)$ and truncated SVD $X(t)$ of order $k=\\{5,20\\}$ on the test problem with $\\epsilon = 0.1$.\n",
+    "We also find the singular values of each approximation method."
    ],
    "metadata": {
     "collapsed": false
@@ -579,12 +648,11 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n",
     "t_f = 10\n",
     "eps_list = [1e-1]\n",
     "k_list = [5, 20]\n",
     "m = 100\n",
-    "fig_sigma, axs_sigma = plt.subplots(nrows=len(eps_list), ncols=len(k_list), sharex=True, squeeze=False,\n",
+    "fig_sigma, axs_sigma = plt.subplots(nrows=len(eps_list), ncols=len(k_list), sharex=True, sharey=True, squeeze=False,\n",
     "                                    constrained_layout=True,\n",
     "                                    figsize=(1 + 3 * len(k_list), 1 + 3 * len(eps_list)))\n",
     "fig_sigma.suptitle(\"Singular values over time\")\n",
@@ -602,10 +670,10 @@
     "        A_0, A, A_dot = generate_second_example(eps=eps)\n",
     "        Y_0 = truncated_svd(A_0, k)\n",
     "        # integrate\n",
-    "        Y, T = matrix_ode_simple(0, t_f, Y_0=Y_0, X=A_dot, TOL=1e-5, h_0=1e-7, verbose=True)\n",
+    "        Y, T = matrix_ode_simple(0, t_f, Y_0=Y_0, X=A_dot, TOL=1e-3, verbose=True)\n",
     "\n",
     "        # store a subset instead\n",
-    "        t_ind = get_equidistant_indexes(T, 0, t_f)\n",
+    "        t_ind = get_equidistant_indexes(T, 0, t_f, n=2 * m)\n",
     "        T = [T[i] for i in t_ind]\n",
     "        Y = [Y[i] for i in t_ind]\n",
     "\n",
@@ -613,23 +681,25 @@
     "        b = np.random.rand(m)\n",
     "        XA_diff = [np.linalg.norm(get_best_approx(A(t), k) - A(t), ord=\"fro\") for t in T]\n",
     "        YA_diff = [np.linalg.norm(multiply_factorized(*y) - A(t), ord=\"fro\") for t, y in zip(T, Y)]\n",
-    "        WA_diff = [np.linalg.norm(get_bidiagonal_approx(A(t), k=k, b=b) - A(t), ord=\"fro\") for t in T]\n",
+    "        YA_dot_diff = [np.linalg.norm(get_y_dot(A_dot=A_dot, Y=y, t=t) - A_dot(t), ord=\"fro\") for t, y in zip(T, Y)]\n",
     "        YX_diff = [np.linalg.norm(multiply_factorized(*y) - get_best_approx(A(t), k), ord=\"fro\") for t, y in zip(T, Y)]\n",
     "        A_norm = np.array([np.linalg.norm(A(t), ord=\"fro\") for t in T])\n",
     "        ax = axs[i, j]\n",
     "        ax.set_title(f\"$k=${k}, $\\epsilon =$ {eps}\")\n",
-    "        ax.plot(T, XA_diff / A_norm, label=\"||X - A||\")\n",
-    "        ax.plot(T, YA_diff / A_norm, label=\"||Y - A||\")\n",
-    "        ax.plot(T, WA_diff / A_norm, label=\"||W - A||\")\n",
-    "        ax.plot(T, YX_diff / A_norm, label=\"||Y - X||\")\n",
+    "        ax.plot(T, XA_diff, label=\"||X - A||\")\n",
+    "        ax.plot(T, YA_diff, label=\"||Y - A||\")\n",
+    "        ax.plot(T, YA_dot_diff, label=\"$||\\dot{Y} - \\dot{A}||$\")\n",
+    "        ax.plot(T, YX_diff, label=\"||Y - X||\")\n",
     "        ax.legend()\n",
     "\n",
     "        sing_values = np.linalg.svd([A(t) for t in T], compute_uv=False)\n",
     "        sing_values_y = np.linalg.svd([S for U, S, V in Y], compute_uv=False)\n",
     "        ax_sigma = axs_sigma[i, j]\n",
+    "        ax_sigma.set_ylabel(\"$\\sigma_i$\")\n",
     "        ax_sigma.set_title(f\"$k=${k}, $\\epsilon =$ {eps}\")\n",
-    "        ax_sigma.plot(T, sing_values[:, :k], \"k-\", lw=0.5, label=\"A(t)\")\n",
-    "        ax_sigma.plot(T[::2], sing_values_y[::2, :k], \"k.\", lw=0.5, label=\"Y(t)\")\n",
+    "        l0, *_ = ax_sigma.plot(T, sing_values, \"k-\", lw=0.5, label=\"A(t)\")\n",
+    "        l1, *_ = ax_sigma.plot(T[::4], sing_values_y[::4, :k], \"r.\", alpha=0.5, label=\"Y(t)\")\n",
+    "        ax_sigma.legend(handles=[l0, l1])\n",
     "\n",
     "        clear_output()\n",
     "plt.show()\n"
@@ -637,43 +707,47 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "Plot singular values, we can here use only $S$ since $Y$ is $S$ tranformed by unitary matricies.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "t = 0.8\n",
-    "eps = 0.1\n",
-    "A_0, A, A_dot = generate_second_example(eps=eps)\n",
-    "plt.plot(np.linalg.svd(A(t), full_matrices=False, compute_uv=False)[:20])\n",
-    "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "insert\n"
+    "This example illustrates how the dynamical low rank approximation $Y(t)$ as no error bounds in general.\n",
+    "The authors of [4] give error bound with under regularity conditions for the best-approximation $X(t)$.\n",
+    "In this case however, the rank $k=5$ best-approximation $X(t)$ is discontinuous, and thus we have no error bounds.\n",
+    "\n",
+    "More specifically the low rank approximation fails because the singular values of $A(t)$ cross multiple times.\n",
+    "To see how this affects the low rank approximation we consider an initial ordering of the singular values of $A(0)$ as $\\sigma_i, 1 \\leq i \\leq 100$.\n",
+    "Now since $A$ has the form\n",
+    "\n",
+    "\\begin{equation}\n",
+    "A(t) = Q_1(t)\\bigg(A_1 + \\cos(t)A_2\\bigg)Q_2^T(t),\n",
+    "\\end{equation}\n",
+    "\n",
+    "we can write $A(t)$ as sum of smooth functions\n",
+    "\n",
+    "\\begin{equation}\n",
+    "A(t) = \\sum_{i=1}^{100} u_i(t)v_i(t)^T \\sigma_i (t).\n",
+    "\\end{equation}\n",
+    "\n",
+    "Now let $t_k$ be the first time when $\\sigma_{j}(t) \\leq \\sigma_{i}(t), j \\leq k < i $.\n",
+    "Then for $0 \\leq t<t_k$:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "X(t) = \\sum_{i=1}^{k} u_i(t)v_i(t)^T \\sigma_i (t),\n",
+    "\\end{equation}\n",
+    "\n",
+    "but at $t_k$ $X$ will change functions with index $i$ for index $j$ and have a discontinuity. We know it has to be a discontinuity because all $u_i$'s and $v_i$'s are smooth functions pointwise orthogonal to each other.\n",
+    "On the other hand, the dynamical low rank approximation is smooth and will thus approximate the $k$ singular values that where largest,\n",
+    "even though they are not largest anymore.\n",
+    "\n",
+    "This crossing singular values can be seen in figure above.\n",
+    "Here we see that when singular values not approximated by $Y(t)$ becomes large.\n",
+    "Then the approximated singular stops to follow the curve of singular values of $A(t)$.\n",
+    "Also in the figure below the errors of different approximations are shown  se that when singular values cross.\n",
+    "Then the difference between the best approximation $X$ and the dynamical low rank approximation  $Y$ grows larger.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -683,12 +757,15 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "insert"
-   ],
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   }
  ],
